--- a/css/shop-mo.css
+++ b/css/shop-mo.css
@@ -579,7 +579,7 @@ input[type='number'] {
   font-size: 4.16666667vw;
   line-height: 13.33333333vw;
   font-weight: 500;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   padding-left: 5.55555556vw;
   box-sizing: border-box;
   width: 100%;
@@ -1779,12 +1779,16 @@ input[type='number'] {
   border-bottom: 1px solid #ddd;
   box-sizing: border-box;
 }
+.container .wrap section.contact .contact-list li.head {
+  display: none;
+}
 .container .wrap section.contact .contact-list li .list-head {
   padding-top: 6.38888889vw;
   padding-right: 5.55555556vw;
   padding-bottom: 6.38888889vw;
   padding-left: 5.55555556vw;
   box-sizing: border-box;
+  cursor: pointer;
 }
 .container .wrap section.contact .contact-list li .list-head p {
   font-size: 3.88888889vw;
@@ -1804,20 +1808,20 @@ input[type='number'] {
 .container .wrap section.contact .contact-list li .list-head p.status {
   margin-right: 4.44444444vw;
 }
-.container .wrap section.contact .contact-list li .list-head p.status:after {
+.container .wrap section.contact .contact-list li .list-head p.status.wait {
+  color: #ccc;
+}
+.container .wrap section.contact .contact-list li .list-head p.date:after {
   content: '';
   display: block;
   width: 0.27777778vw;
   height: 2.77777778vw;
   background-color: #ddd;
   position: absolute;
-  right: -2.22222222vw;
+  left: -2.22222222vw;
   top: 1.11111111vw;
-  left: auto;
+  right: auto;
   bottom: auto;
-}
-.container .wrap section.contact .contact-list li .list-head p.status.wait {
-  color: #ccc;
 }
 .container .wrap section.contact .contact-list li .qna {
   padding-top: 5.55555556vw;
@@ -1903,6 +1907,9 @@ input[type='number'] {
   left: auto;
   bottom: auto;
 }
+.container .wrap section.contact .contact-list li.on .list-head {
+  background-color: #F8F8F8;
+}
 .container .wrap section.contact .contact-list li.on .qna {
   display: block;
   border-top: 1px solid #ddd;
@@ -1921,6 +1928,98 @@ input[type='number'] {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.container .wrap section.edit-sec article .tit {
+  font-size: 5vw;
+  letter-spacing: 6.11111111vw;
+  color: #333;
+  letter-spacing: -0.01em;
+  font-weight: 600;
+}
+.container .wrap section.edit-sec article .edit-cont {
+  border-top: 0.55555556vw solid #103831;
+  margin-top: 11.11111111vw;
+  padding-top: 1.66666667vw;
+  box-sizing: border-box;
+}
+.container .wrap section.edit-sec article .edit-cont .sub {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  color: #333;
+  letter-spacing: -0.01em;
+  font-weight: 500;
+  margin-top: 6.66666667vw;
+  margin-right: 0vw;
+  margin-bottom: 3.33333333vw;
+  margin-left: 0vw;
+}
+.container .wrap section.edit-sec article .edit-cont .num-select .label {
+  color: #aaa;
+}
+.container .wrap section.edit-sec article .edit-cont .num-select.val1 .label {
+  color: #111;
+}
+.container .wrap section.edit-sec article .edit-cont input {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  color: #111;
+  width: 83.33333333vw;
+  height: 13.88888889vw;
+  line-height: 13.88888889vw;
+  padding-left: 5.55555556vw;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+}
+.container .wrap section.edit-sec article .edit-cont .textarea-wrap {
+  width: 83.33333333vw;
+  height: 50vw;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  position: relative;
+}
+.container .wrap section.edit-sec article .edit-cont .textarea-wrap textarea {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  color: #111;
+  width: 82.77777778vw;
+  height: 36.11111111vw;
+  margin-bottom: 5.55555556vw;
+  padding: 5.55555556vw;
+  box-sizing: border-box;
+  font-family: Pretendard, sans-serif;
+}
+.container .wrap section.edit-sec article .edit-cont .textarea-wrap textarea:focus {
+  outline: none;
+}
+.container .wrap section.edit-sec article .edit-cont .textarea-wrap .txt-length {
+  font-size: 3.88888889vw;
+  line-height: 4.72222222vw;
+  color: #aaa;
+  letter-spacing: -0.01em;
+  text-align: right;
+  padding-right: 5.55555556vw;
+  box-sizing: border-box;
+  font-weight: 500;
+}
+.container .wrap section.edit-sec article .edit-cont .btn {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  letter-spacing: -0.01em;
+  color: #fff;
+  width: 44.44444444vw;
+  height: 13.33333333vw;
+  line-height: 13.33333333vw;
+  background-color: #ddd;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16.66666667vw;
+  pointer-events: none;
+}
+.container .wrap section.edit-sec article .edit-cont .val1 + p + .val2 + p + .val3 + .btn {
+  background-color: #103831;
+  pointer-events: auto;
 }
 .container .wrap footer {
   padding-top: 0vw;
@@ -1996,6 +2095,79 @@ input[type='number'] {
   display: none;
 }
 .container .wrap.order-complete .order-result {
+  display: inline-block;
+}
+.popup {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0vw;
+  top: 0vw;
+  right: auto;
+  bottom: auto;
+  z-index: 100;
+  display: none;
+}
+.popup .dim {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0vw;
+  top: 0vw;
+  right: auto;
+  bottom: auto;
+  background: rgba(17, 17, 17, 0.5);
+}
+.popup .inner {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  right: auto;
+  bottom: auto;
+  width: 83.33333333vw;
+  height: 51.66666667vw;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  text-align: center;
+}
+.popup .inner .del-inner {
+  padding-top: 16.66666667vw;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.popup .inner .del-inner p {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  letter-spacing: -0.01em;
+  color: #555;
+}
+.popup .inner .del-inner .btns {
+  font-size: 0vw;
+  width: 100%;
+  height: 13.33333333vw;
+  position: absolute;
+  left: 0vw;
+  bottom: 0vw;
+  right: auto;
+  top: auto;
+  border-top: 1px solid #eee;
+}
+.popup .inner .del-inner .btns a {
+  font-size: 4.16666667vw;
+  line-height: 5vw;
+  letter-spacing: -0.01em;
+  color: #555;
+  width: 50%;
+  line-height: 13.33333333vw;
+  display: inline-block;
+}
+.popup .inner .del-inner .btns a.cancel-btn {
+  border-right: 1px solid #eee;
+  box-sizing: border-box;
+}
+.popup.on {
   display: inline-block;
 }
 /*# sourceMappingURL=shop-mo.css.map */
