--- a/css/shop-t.less
+++ b/css/shop-t.less
@@ -27,7 +27,7 @@
           .menu-list { .p(21,0); .h(378); box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); }
         }
       }
-      section { .p(50,60,120); .mt(50); .-box;
+      section { .p(60,60,120); .mt(50); .-box;
         h3 { .fs(22); .lh(27); }
         article {
           &.top {
@@ -405,6 +405,58 @@
             }
           }
         }
+        &.contact { .clear;
+          .tit { .fs(22); .ls(26); .ls(-0.01em); }
+          .contact-list { .-t(#103831,2); .m(50,0,20);
+            li {
+              &.head { .block;
+                p { .fs(15); .lh(64); .ls(-0.01em); color:#333; .ib; .vam; .tc; .semi-bold;
+                  &:nth-child(1) { .w(410); }
+                  &:nth-child(2), &:nth-child(3) { .w(119); }
+                }
+              }
+              .list-head { .p(0,33,0,40); .clear;
+                p { .fs(15); .lh(64); .ls(-0.01em);
+                  &.tit { .fs(15); .lh(64); .mb(0); .w(330); .fl; }
+                  &.status { .mr(0); .fr; .ml(57); }
+                  &.date { .fr;
+                    &:after { .hide; }
+                  }
+                }
+              }
+              .qna { .p(40);
+                > div { .p(0);
+                  span { .fs(12);  .lh(30); .wh(30,30); .mr(14); }
+                  p { .fs(15); .lh(22); .ls(-0.01em); .w(400); .mt(4); }
+                }
+                .q { .mb(30); }
+                .edit-del { .mt(36);
+                  a { .fs(15); .lh(18); .ls(-0.01em);
+                    &.edit { .mr(16);
+                      &:after { .cnt; .wh(1,12); .rt(-9,2); }
+                    }
+                  }
+                }
+              }
+            }
+          }
+          .btn { .fs(15); .lh(18); .ls(-0.01em); .wh(160,48); .lh(48); .fr; }
+        }
+        &.edit-sec {
+          article {
+            .tit { .fs(22); .ls(26); .ls(-0.01em); }
+            .edit-cont { .-t(#103831,2); .mt(50); .pt(6);
+              .sub { .fs(15); .lh(18); .ls(-0.01em); .m(24,0,12); }
+              .num-select .opt-list { .w(648); z-index: 2 }
+              input { .fs(15); .lh(18); .wh(648,50); .lh(50); .pl(20); }
+              .textarea-wrap { .wh(648,180);
+                textarea { .fs(15); .lh(18); .wh(646,130); .mb(18); .p(20); }
+                .txt-length { .fs(14); .lh(17); .ls(-0.01em); .pr(20); }
+              }
+              .btn { .fs(15); .lh(18); .ls(-0.01em); .wh(270,48); .lh(48); .mt(60); }
+            }
+          }
+        }
       }
 
       footer { .p(0,60,60);
@@ -428,7 +480,16 @@
   }
 }
 
-
+.popup {
+  .inner { .wh(300,186);
+    .del-inner { .pt(60);
+      p { .fs(15); .lh(18); .ls(-0.01em); }
+      .btns { .wh(100%,48);
+        a { .fs(15); .lh(18); .ls(-0.01em); .lh(48); }
+      }
+    }
+  }
+}
 
 
 
