모바일 메뉴 오픈시 바디 스크롤 막기

--- a/css/shop-mo.css
+++ b/css/shop-mo.css
@@ -58,6 +58,16 @@ input[type='number'] {
   font-size: 4.16666667vw;
   color: #AAAAAA;
 }
+input[type=number]:disabled {
+  -webkit-opacity: 1;
+  opacity: 1;
+  color: #333;
+}
+input[type=text]:disabled {
+  -webkit-opacity: 1;
+  opacity: 1;
+  color: #333;
+}
 .container {
   height: 100%;
 }
