--- a/css/shop-mo.less
+++ b/css/shop-mo.less
@@ -20,6 +20,8 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { opacity: 0; display: none; }
 input[type='number'] { -moz-appearance: textfield; }
 ::placeholder { .fs(15); color:#AAAAAA; }
+input[type=number]:disabled { -webkit-opacity:1; opacity: 1; color:#333; }
+input[type=text]:disabled { -webkit-opacity:1; opacity: 1; color:#333; }
 
 .container { .hf;
   .wrap { .fs(0); .tc; .hf; .rel;
